# rl-hours-tracker

./: Cargo.toml  LICENSE  README.md  date.txt  hours.txt  test.txt
.github/workflows/: rust.yml
rl-hours-app/: package-lock.json  package.json  vite.config.ts
rl-hours-app/src-tauri/: Cargo.toml  tauri.conf.json
rl-hours-app/src-tauri/src/: main.rs
src/: calculate_past_two.rs  lib.rs  main.rs  tests.rs  update.rs  website_files.rs  winit_tray_icon.rs
tracker/: Cargo.toml
tracker/website/css/: main.css
website/css/: home.css  main.css
website/js/: animations.js  graphs.js
