[package]
name = "rl-hours-tracker"
license = "MIT"
version = "0.3.2"
documentation = "https://docs.rs/crate/rl-hours-tracker"
repository = "https://github.com/OneilNvM/rl-hours-tracker"
edition = "2021"
description = "A rust binary used for calculating the hours played of Rocket League in the past two weeks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.5.0"
bytes = "1.7.2"
chrono = "0.4.38"
reqwest = "0.12.7"
stopwatch = "0.0.7"
sysinfo = "0.31.2"
tokio = {version = "1.40.0", features = ["rt-multi-thread", "rt", "macros"]}
webbrowser = "1.0.1"
