[package]
name = "rl-hours-tracker"
license = "MIT"
version = "0.4.1"
documentation = "https://docs.rs/crate/rl-hours-tracker"
repository = "https://github.com/OneilNvM/rl-hours-tracker"
edition = "2021"
description = "A rust binary used for calculating the hours played of Rocket League in the past two weeks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.5.0"
bytes = "1.9.0"
chrono = "0.4.39"
colour = "2.1.0"
directories = "6.0.0"
image = "0.25.9"
log = "0.4.29"
log4rs = "1.4.0"
reqwest = "0.12.12"
stopwatch = "0.0.7"
sysinfo = "0.33.1"
tokio = {version = "1.43.0", features = ["rt-multi-thread", "rt", "macros"]}
tray-icon = "0.21.2"
webbrowser = "1.0.3"
winit = "0.30.12"
zip = "2.2.2"
